<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearUsuario">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/altologo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:paddingTop="@dimen/editTextSize"
                android:paddingLeft="@dimen/edittextusuario"
                android:text="@string/hint_username"
                android:textSize="@dimen/edittextusuario" />
            <EditText
                android:id="@+id/editext_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="@dimen/editTextSize"
                android:hint="@string/hint_username" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/editTextSize"
                android:paddingLeft="@dimen/editTextSize"
                android:text="@string/etiqPassword"
                android:textSize="@dimen/edittextusuario" />
            <EditText
                android:id="@+id/editext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="@dimen/editTextSize"
                android:hint="@string/hint_password" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/editTextSize"
                android:paddingLeft="@dimen/editTextSize"
                android:text="@string/edit_number"
                android:textSize="@dimen/edittextusuario" />
            <EditText
                android:id="@+id/editext_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="@dimen/editTextSize"
                android:hint="@string/hint_number" />
        </LinearLayout>
        <Button
            android:id="@+id/AgregarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/altologo"
            android:text="@string/addusuario"
            android:onClick="agregarUsuario"
            android:theme="@style/RaisedButtonDark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
