<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/paddingtoplogin"
            android:paddingLeft="@dimen/paddinglogin"
            android:paddingRight="@dimen/paddinglogin">

            <ImageView
                android:id="@+id/logo"
                android:layout_marginRight="@dimen/altologo"
                android:layout_marginLeft="@dimen/altologo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/altologo"
                android:background="@drawable/whatsapp"
                android:scaleType="fitCenter">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.6">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/paddingtoplogin"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_marginTop="@dimen/editTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextWhite"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_username"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextWhite"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/strlogin"
                        android:onClick="goWhatsapp"
                        android:theme="@style/RaisedButtonDark"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/forgetpassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recordarpassword"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/crearusuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/CrearUsuario"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize"
                            android:gravity="center"
                            android:onClick="addUsuario"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
